2021-03-02  Timm Bäder  <tbaeder@redhat.com>

	* elfcompress.c (process_file): Remove cleanup() function and
	replace it with a cleanup label at the end of the function.
	Initialize res to -1.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* elfcompress.c (process_file): Move get_sections function...
	(get_section): ...to top-level static function taking an
	sections array and shnum.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* elfcompress.c (process_file): Move get_section function...
	(get_section): ...to top-level static function taking an
	sections array.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* elfcompress.c (process_file): Move set_section function...
	(set_section): ...to top-level static function taking a
	section array.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* unstrip.c (handle_implicit_modules): Inline the next function
	in three places. This is simply dwfl_getmodules with match_module
	callback providing mmi.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* unstrip.c (handle_explicit_files): Move warn function...
	(warn): ...here as top-level static function taking stripped,
	unstripped files and force flag as extra arguments.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* unstrip.c (copy_elided_sections): Inline find_unalloc_section
	function into calling location. The sec pointer is set to NULL
	before the if-else statement and only set when match is found.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* unstrip.c (find_alloc_sections_prelink): Move check_match to...
	(check_match): Adjusted to return whether there was no match,
	which indicates a failure. So callers are adjusted to or the
	result into a local fail boolean.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* unstrip.c (adjust_relocs): Move adjust_reloc function to...
	(adjust_reloc): ... here as static top-level function taking
	a map array and size as extra arguments.

2021-02-17  Timm Bäder  <tbaeder@redhat.com>
